# Nikon-Coolscan-RE

./: .gitignore  .gitmodules  .mcp.json  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/ghidra-run/: SKILL.md
.claude/skills/log-finding/: SKILL.md
.claude/skills/phase-check/: SKILL.md
.claude/skills/prefetch-refs/: SKILL.md
.github/workflows/: agent-harness-tests.yml  m15-regression.yml
docs/log/: general.md  strategy.md
docs/phases/: phase-00-bootstrap.md  phase-01-nkduscan.md  phase-02-ls5000.md  phase-03-nikonscan4.md  phase-04-firmware.md  phase-05-protocol-spec.md  phase-06-drag-ice.md  phase-07-cross-model.md
emulator/: Cargo.toml
emulator/bridge/: Cargo.toml
emulator/bridge/src/: gadget.rs  lib.rs  nikon_ids.rs  tcp.rs  traits.rs  usbip_server.rs
emulator/coolscan-emu/: Cargo.toml
emulator/coolscan-emu/src/: config.rs  lib.rs  main.rs  orchestrator.rs
emulator/coolscan-emu/tests/: e2e_scan.rs  smoke_idle_stability.rs  smoke_usbip_e2e.rs
emulator/docs/: backlog.md  design-gaps.md  roadmap.md
emulator/docs/decisions/: instruction-encoding.md  peripheral-models.md
emulator/docs/log/: general.md
emulator/docs/log/components/: agent-harness-attempts.md  asic-attempts.md  boot-attempts.md  bridge-attempts.md  decoder-attempts.md  executor-attempts.md  isp1581-attempts.md  motor-attempts.md
emulator/docs/log/phases/: phase-0-setup.md  phase-1-cpu.md  phase-10-calibration.md  phase-11-real-usb.md  phase-11-usb-integration.md  phase-15-nikonscan-e2e.md  phase-2-interrupts.md  phase-3-usb.md  phase-4-scsi.md  phase-5-scan.md  phase-6-polish.md  phase-7-isp1581-dma.md  phase-8-motor.md  phase-9-ccd-scan.md
emulator/h8300h-core/: Cargo.toml
emulator/h8300h-core/src/: cpu.rs  decode.rs  execute.rs  interrupt.rs  lib.rs  memory.rs
emulator/hil/: Cargo.toml  README.md
emulator/hil/agent/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
emulator/hil/agent/baselines/inquiry_smoke/: windows-11-clean-desktop.json
emulator/hil/agent/docs/: architecture.md  debugging.md  holo3-endpoint.md  operator-guide.md  recipe-authoring.md
emulator/hil/agent/docs/adr/: 0001-vision-oracle-pattern.md  0002-vm-on-dev-box.md  0003-fastmcp-vs-mcp-sdk.md  0004-structured-output-action-schema.md
emulator/hil/agent/src/coolscan_hil_agent/: __init__.py  actions.py  cli.py  config.py  errors.py  holo3.py  lifecycle.py  logging_setup.py  mcp_server.py  metrics.py  recipe.py  recorder.py  runner.py  vnc.py
emulator/hil/agent/src/coolscan_hil_agent/recipes/: __init__.py  full_scan.py  inquiry_smoke.py  preview_scan.py
emulator/hil/agent/tests/: conftest.py  test_actions.py  test_cli.py  test_config.py  test_errors.py  test_holo3.py  test_lifecycle.py  test_logging_setup.py  test_mcp_server.py  test_metrics.py  test_recipe.py  test_recorder.py  test_runner.py  test_vnc.py
emulator/hil/configs/: autounattend.xml  postinstall.cmd  tailscale-vnc-domains.txt
emulator/hil/docs/: architecture.md  kernel-mode-fallback.md  troubleshooting.md  vm-setup.md  windows-setup.md
emulator/hil/scripts/: build_autounattend_iso.sh  build_no_prompt_iso.sh  build_postinstall_iso.sh  build_vm_autonomously.sh  ci_run_recipe.sh  download_usbip_win2.sh  install_driver_in_vm.sh  install_libvirt_hooks.sh  install_usbip_win2.ps1  libvirt-hook-vnc-tailscale  re_roll_vm.sh  setup_dev_box.sh  verify_iso.sh  win_vm_create.sh
emulator/hil/src/: client.rs  lib.rs  test_harness.rs
emulator/peripherals/: Cargo.toml
emulator/peripherals/src/: adc.rs  asic.rs  bus.rs  dma.rs  gpio.rs  isp1581.rs  itu.rs  lib.rs  motor.rs  sci.rs  wdt.rs
emulator/scripts/: tcp_test_client.py
ghidra/exports/: all_exports_imports.csv  firmware_forced_handlers.txt  firmware_h8_decoded_handlers.txt  firmware_handlers_dump.txt  firmware_isp1581_usb.txt  firmware_r2_full_disasm.txt  firmware_scsi_dispatch.txt  firmware_scsi_handlers.txt  firmware_vectors.json  ls5000_eject_maid.txt  ls5000_maid_capabilities.txt  ls5000_param_mapping.txt  ls5000_param_readers.txt  ls5000_scan_controller.txt  ls5000_scan_phases.txt  ls5000_scan_sequences.txt  ls5000_vendor_ext_init.txt  ls5000_vendor_ext_reg.txt  nikonscan4_cap_methods.txt  nikonscan4_command_queues.txt  nikonscan4_ctm_methods.txt  nikonscan4_ctm_vtable.txt  nikonscan4_decompiled.txt  nikonscan4_eject.txt  nikonscan4_eject_deep.txt  nikonscan4_maid_cap_ids.txt  nikonscan4_maid_chain.txt  nikonscan4_maid_queues.txt  nikonscan4_scan_workflows.txt  rtti_classes.json
ghidra/scripts/: VerifyFirmware.java  bulk_decompile_firmware.java  decompile_cap_methods.java  decompile_ctm_methods.java  decompile_eject.java  decompile_eject_deep.java  decompile_eject_maid.java  decompile_maid_chain.java  decompile_nikonscan4.java  decompile_param_mapping.java  decompile_param_readers.java  decompile_scan_controller.java  decompile_scan_phases.java  decompile_vendor_ext_init.java  decompile_vendor_ext_reg.java  dump_all_functions.java  dump_calibration.java  dump_dispatcher.py  dump_dispatcher2.py  dump_firmware_handlers.java  dump_firmware_startup.java  dump_isp1581_usb.java  dump_reqsense.py  dump_reqsense2.py  dump_scsi_dispatch.java  dump_scsi_handlers.java  dump_usb_transfer.java  dump_usb_transfer.py  extract_maid_cap_ids.java  find_ctm_vtable.java  find_scsi_callers.java  force_disassemble_handlers.java  trace_command_queues.java  trace_maid_and_queues.java  trace_maid_capabilities.java  trace_scan_sequences.java  trace_scan_workflows.java  verify_firmware.py
kb/architecture/: system-overview.md
logs/phases/: phase-00-setup.md
r2/scripts/: firmware_init.r2
scripts/python/: decode_request_sense.py  decode_sense_table.py  extract_pe_exports.py  extract_rtti.py  find_sense_codes.py  firmware_asic_analysis.py  firmware_asic_deep.py  firmware_full_disasm.py  firmware_handlers_deep.py  firmware_r2_disasm.py  h8_decode_handlers.py  parse_dtc_tables.py  parse_vector_table.py  sense_catalog_final.py  trace_sense_writes.py
scripts/shell/: bootstrap_ghidra.sh  run_emu_tests.sh
tools/: README.md
(+98 files in other folders)
