[workspace]
members = [
    "coolscan-emu",
    "h8300h-core",
    "peripherals",
    "bridge",
    "hil",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
h8300h-core = { path = "h8300h-core" }
peripherals = { path = "peripherals" }
bridge = { path = "bridge" }
hil = { path = "hil" }
log = "0.4"
env_logger = "0.11"
ctrlc = "3"
usbip = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time"] }
