[package]
name = "bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "USB bridge layer (TCP socket + Linux USB gadget)"

[dependencies]
peripherals.workspace = true
log.workspace = true
usbip.workspace = true
tokio.workspace = true

[dev-dependencies]
env_logger.workspace = true
