[package]
name = "bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "USB bridge layer (TCP socket + Linux USB gadget)"

[dependencies]
peripherals.workspace = true
log.workspace = true
usbip.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
# Needed for the zero-length write(2) syscall used to emit a USB ZLP on
# bulk-IN transfers whose payload lands on a max-packet boundary.
# std::io::Write::write_all short-circuits on empty slices and never
# makes the syscall, so we go through libc directly.
libc = "0.2"

[dev-dependencies]
env_logger.workspace = true
